--- a/cnn_model.ipynb
+++ b/cnn_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,7 @@
     "\n",
     "DATA_DIR = Path.cwd() / 'data'\n",
     "MODEL_DIR = Path.cwd() / 'models'\n",
+    "RESULTS_DIR = Path.cwd() / 'results'\n",
     "IMAGE_DIR = DATA_DIR / 'images'\n",
     "# IMAGE_DIR = DATA_DIR / 'sentinel-images'\n",
     "'''\n",
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,12 +247,13 @@
     "batch_size = 8\n",
     "num_workers = 0\n",
     "\n",
-    "num_epochs = 5"
+    "num_epochs = 10\n",
+    "patience = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,17 +324,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_checkpoint(model_to_save, filename='checkpoint.pth.tar'):\n",
+    "def save_checkpoint(model_to_save, filename='checkpoint.pt'):\n",
     "    torch.save(model_to_save.state_dict(), MODEL_DIR / filename)\n",
     "\n",
     "best_loss = None\n",
-    "checkpoints = []\n",
-    "counter = 0\n",
-    "patience = 4"
+    "counter = 0"
    ]
   },
   {
@@ -354,7 +354,7 @@
    "source": [
     "for epoch in range(num_epochs):\n",
     "    ## TRAINING LOOP\n",
-    "    train_images = 0\n",
+    "    train_count = 0\n",
     "    train_loss = 0\n",
     "    avg_train_loss = 0\n",
     "    pbar_train = tqdm(train_loader, total=len(train_loader), leave=False)\n",
@@ -375,9 +375,9 @@
     "        optimizer.step()\n",
     "        \n",
     "        # Update progress bar\n",
-    "        train_images += 1\n",
+    "        train_count += 1\n",
     "        train_loss += loss.item()\n",
-    "        avg_train_loss = train_loss/train_images\n",
+    "        avg_train_loss = train_loss/train_count\n",
     "        desc = (\n",
     "            f\"Epoch {epoch+1}/{num_epochs}\"\n",
     "            f\" - Train Loss: {avg_train_loss:.4f}\"\n",
@@ -386,7 +386,7 @@
     "    \n",
     "    \n",
     "    ## VALIDATION LOOP   \n",
-    "    val_images = 0\n",
+    "    val_count = 0\n",
     "    val_loss = 0\n",
     "    avg_val_loss = 0\n",
     "    pbar_val = tqdm(val_loader, total=len(val_loader), leave=True)\n",
@@ -402,9 +402,9 @@
     "            loss = criterion(outputs, targets)\n",
     "            \n",
     "            # Update progress bar\n",
-    "            val_images += 1\n",
+    "            val_count += 1\n",
     "            val_loss += loss.item()\n",
-    "            avg_val_loss = val_loss/val_images\n",
+    "            avg_val_loss = val_loss/val_count\n",
     "            desc = (\n",
     "                f\"Epoch {epoch+1}/{num_epochs}\"\n",
     "                f\" - Train Loss: {avg_train_loss:.4f}\"\n",
@@ -416,28 +416,21 @@
     "    ## CHECKPOINTING AND EARLY STOPPING\n",
     "    if best_loss is None:   # i.e. first epoch\n",
     "        best_loss = avg_val_loss\n",
-    "        save_checkpoint(model, filename=f'checkpoint.pth.tar')\n",
+    "        save_checkpoint(model, filename=f'checkpoint.pt')\n",
+    "        \n",
     "    elif avg_val_loss > best_loss:  # i.e. loss increased\n",
     "        counter += 1\n",
     "        if counter >= patience:\n",
-    "            print('Validation loss decreased. Stopping training.')\n",
+    "            print('Validation loss has not decreased. Stopping training.')\n",
     "            break\n",
+    "        \n",
     "    else:   # avg_val_loss < best_loss i.e. loss decreased\n",
     "        best_loss = avg_val_loss\n",
-    "        save_checkpoint(model, filename=f'checkpoint.pth.tar')\n",
+    "        save_checkpoint(model, filename=f'checkpoint.pt')\n",
     "        counter = 0\n",
     "    \n",
     "    \n",
     "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_checkpoint(model, filename='checkpoint.pth.tar')"
    ]
   },
   {
@@ -450,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +452,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,20 +460,20 @@
    "source": [
     "model = CNN(NUM_CLASSES).to(device)\n",
     "\n",
-    "model_pth = MODEL_DIR / 'model.pt'\n",
+    "model_pth = MODEL_DIR / 'checkpoint.pt'\n",
     "model.load_state_dict(torch.load(model_pth))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2987/2987 [00:57<00:00, 52.26it/s]\n"
+      "100%|██████████| 4275/4275 [01:16<00:00, 55.84it/s]\n"
      ]
     }
    ],
@@ -504,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +555,7 @@
        "      <th>4</th>\n",
        "      <td>aalw</td>\n",
        "      <td>west</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -611,7 +604,7 @@
        "1     aair       west         1\n",
        "2     aajw  northeast         1\n",
        "3     aalr    midwest         1\n",
-       "4     aalw       west         1\n",
+       "4     aalw       west         4\n",
        "...    ...        ...       ...\n",
        "6505  zzpn  northeast         1\n",
        "6506  zzrv       west         4\n",
@@ -622,7 +615,7 @@
        "[6510 rows x 3 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,20 +626,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    5113\n",
-       "2      66\n",
-       "3     489\n",
-       "4     842\n",
+       "1    4640\n",
+       "2       3\n",
+       "3     549\n",
+       "4    1318\n",
        "Name: severity, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,12 +650,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    4158\n",
+       "2     439\n",
+       "3     440\n",
+       "4    1473\n",
+       "Name: severity, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission.severity.value_counts().sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv('submission.csv', index=False)"
+    "submission.to_csv(RESULTS_DIR / '2_all-cnn.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
