--- a/cnn_model.ipynb
+++ b/cnn_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,13 @@
     "\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +51,9 @@
     "RESULTS_DIR = Path.cwd() / 'results'\n",
     "IMAGE_DIR = DATA_DIR / 'images'\n",
     "# IMAGE_DIR = DATA_DIR / 'sentinel-images'\n",
+    "\n",
+    "NUM_CLASSES = 5\n",
+    "\n",
     "'''\n",
     "transform = transforms.Compose(\n",
     "    [\n",
@@ -60,14 +64,17 @@
     ")\n",
     "'''\n",
     "\n",
-    "transform = transforms.Compose(\n",
+    "transform_image = transforms.Compose(\n",
     "    [\n",
     "        transforms.Resize((512, 512), interpolation=transforms.InterpolationMode.BILINEAR),\n",
     "        transforms.CenterCrop((256, 256)),\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
     "    ]\n",
-    ")"
+    ")\n",
+    "\n",
+    "# https://towardsai.net/p/data-science/how-when-and-why-should-you-normalize-standardize-rescale-your-data-3f083def38ff\n",
+    "temp_scalar = MinMaxScaler(feature_range=(0, 1))"
    ]
   },
   {
@@ -80,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,50 +98,62 @@
     "        num_classes (int): Number of classes\n",
     "        dropout (float): Dropout rate\n",
     "    \"\"\"\n",
-    "    def __init__(self, num_classes, dropout=0.2):\n",
+    "    def __init__(self, metadata_features, dropout=0.2):\n",
     "        super(CNN, self).__init__()\n",
     "        # EfficientNetV2 base\n",
     "        # self.pretrained_cnn = models.efficientnet_v2_s(weights='DEFAULT')\n",
     "        # in_features = self.pretrained_cnn.classifier[1].in_features\n",
     "        # self.pretrained_cnn = nn.Sequential(*list(self.pretrained_cnn.children())[:-1])\n",
     "        \n",
-    "        \n",
     "        # ResNet50 base\n",
     "        self.pretrained_cnn = models.resnet50(weights='DEFAULT')\n",
-    "        in_features = self.pretrained_cnn.fc.in_features\n",
+    "        cnn_out = self.pretrained_cnn.fc.in_features\n",
     "        self.pretrained_cnn = nn.Sequential(*list(self.pretrained_cnn.children())[:-1])\n",
     "        \n",
+    "        fc_in = cnn_out + metadata_features\n",
+    "        fc_embed = cnn_out//2\n",
+    "        fc_out = cnn_out//4\n",
     "        \n",
     "        # Add fully connected layers\n",
     "        self.fc = nn.Sequential(\n",
-    "            nn.Linear(in_features, in_features//2),\n",
+    "            nn.Linear(fc_in, fc_embed),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(dropout),\n",
-    "            nn.Linear(in_features//2, num_classes)\n",
+    "            nn.Linear(fc_embed, fc_out),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(dropout),\n",
     "        )\n",
     "        \n",
-    "        # Final softmax layer\n",
-    "        #self.softmax = nn.Softmax(dim=1)\n",
+    "        # Final classifier layer\n",
+    "        self.classifier = nn.Linear(fc_out, NUM_CLASSES)\n",
     "        \n",
-    "    def forward(self, x):\n",
+    "        \n",
+    "    def forward(self, img, met):\n",
     "        \"\"\"EfficientNetV2 forward pass\n",
     "        \n",
     "        Args:\n",
-    "            x (torch.Tensor): Input image\n",
+    "            img (torch.Tensor): Input image\n",
+    "            met (torch.Tensor): Input metadata features\n",
     "            \n",
     "        Returns:\n",
     "            preds (torch.Tensor): Predicted labels\n",
     "        \"\"\"\n",
-    "        features = self.pretrained_cnn(x)                   # (batch_size, 1280, 1, 1)\n",
-    "        features = features.view(features.size(0), -1)      # (batch_size, 1280)\n",
-    "        features = self.fc(features)                        # (batch_size, num_classes)\n",
+    "        img_features = self.pretrained_cnn(img)                             # (batch_size, cnn_out, 1, 1)\n",
     "        \n",
-    "        return features"
+    "        img_features = img_features.view(img_features.size(0), -1)          # (batch_size, cnn_out)\n",
+    "        \n",
+    "        features = torch.cat((img_features, met.unsqueeze(dim=1)), dim=1)   # (batch_size, cnn_out+metadata_features)\n",
+    "\n",
+    "        features = self.fc(features)\n",
+    "                \n",
+    "        logits = self.classifier(features)\n",
+    "        \n",
+    "        return logits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,17 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SatelliteDataset(Dataset):\n",
-    "    def __init__(self, df, transform=None):\n",
+    "    def __init__(self, df, image_transform=None):\n",
     "        self.df = df\n",
-    "        self.uids = self.df['uid'].tolist()\n",
-    "        self.targets = self.df['severity'].tolist()\n",
+    "        self.uids = self.df['uid'].to_numpy()\n",
+    "        self.temps = self.df['temperature'].to_numpy(dtype=np.float32)\n",
+    "        self.targets = self.df['severity'].to_numpy()\n",
     "\n",
-    "        self.transform = transform\n",
+    "        self.image_transform = image_transform\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.df)\n",
@@ -184,15 +204,15 @@
     "        image_pth = IMAGE_DIR / f\"{self.uids[index]}.png\"\n",
     "        image = Image.open(image_pth)\n",
     "        \n",
-    "        if self.transform is not None:\n",
-    "            image = self.transform(image)\n",
-    "            \n",
-    "        return self.uids[index], image, self.targets[index] # returns uid, image, target/severity"
+    "        if self.image_transform is not None:\n",
+    "            image = self.image_transform(image)\n",
+    "                    \n",
+    "        return self.uids[index], image, self.temps[index], self.targets[index] # returns (uid, image, target/severity)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,12 +236,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Model"
+    "## Data Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,17 +250,117 @@
     "metadata.date = pd.to_datetime(metadata.date)\n",
     "\n",
     "train_labels = pd.read_csv(DATA_DIR / 'train_labels.csv')\n",
-    "submission_format = pd.read_csv(DATA_DIR / 'submission_format.csv')"
+    "\n",
+    "submission_format = pd.read_csv(DATA_DIR / 'submission_format.csv')\n",
+    "\n",
+    "temperature = pd.read_csv(DATA_DIR / 'temperature.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaled_temp = temperature.copy()\n",
+    "scaled_temp.temperature = temp_scalar.fit_transform(scaled_temp.temperature.values.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata_temp = metadata.merge(\n",
+    "    scaled_temp,\n",
+    "    how=\"inner\",\n",
+    "    left_on='uid',\n",
+    "    right_on='uid',\n",
+    "    validate='1:1'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get entire train set from metadata file\n",
+    "train_full = train_labels.merge(\n",
+    "    metadata_temp,\n",
+    "    how='inner',\n",
+    "    left_on='uid',\n",
+    "    right_on='uid',\n",
+    "    validate='1:1',\n",
+    ")\n",
+    "train_full = train_full[['uid', 'temperature', 'severity']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split into train and validation sets to better evaluate the model\n",
+    "train, validate = train_test_split(train_full, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get test set from metadata file\n",
+    "test_full = metadata_temp[metadata_temp['split'] == 'test']\n",
+    "test = submission_format.merge(\n",
+    "    test_full,\n",
+    "    how='inner',\n",
+    "    left_on='uid',\n",
+    "    right_on='uid',\n",
+    "    validate='1:1',\n",
+    ")\n",
+    "test = test[['uid', 'temperature', 'region', 'severity']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8718, 2180, 3726)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train), len(validate), len(test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hyperparameters\n",
-    "NUM_CLASSES = 5\n",
     "learning_rate = 3e-4\n",
     "dropout = 0.2\n",
     "\n",
@@ -253,69 +373,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get entire train set from metadata file\n",
-    "train_full = train_labels.merge(\n",
-    "    metadata,\n",
-    "    how='inner',\n",
-    "    left_on='uid',\n",
-    "    right_on='uid',\n",
-    "    validate='1:1',\n",
-    ")\n",
-    "train_full = train_full[['uid', 'severity']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split into train and validation sets to better evaluate the model\n",
-    "train, validate = train_test_split(train_full, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get test set from metadata file\n",
-    "test_full = metadata[metadata['split'] == 'test']\n",
-    "test = submission_format.merge(\n",
-    "    test_full,\n",
-    "    how='inner',\n",
-    "    left_on='uid',\n",
-    "    right_on='uid',\n",
-    "    validate='1:1',\n",
-    ")\n",
-    "test = test[['uid', 'region', 'severity']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get dataloaders\n",
-    "train_loader, train_dataset = get_loader(train, transform, batch_size=batch_size, shuffle=True, num_workers=num_workers)\n",
-    "val_loader, val_dataset = get_loader(validate, transform, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
-    "test_loader, test_dataset = get_loader(test, transform, batch_size=1, shuffle=False, num_workers=num_workers)"
+    "train_loader, train_dataset = get_loader(train, transform_image, batch_size=batch_size, shuffle=True, num_workers=num_workers)\n",
+    "val_loader, val_dataset = get_loader(validate, transform_image, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
+    "test_loader, test_dataset = get_loader(test, transform_image, batch_size=1, shuffle=False, num_workers=num_workers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model object\n",
-    "model = CNN(NUM_CLASSES, dropout=dropout).to(device)\n",
+    "model = CNN(metadata_features=1, dropout=dropout).to(device)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss(reduction='mean').to(device)\n",
     "\n",
@@ -324,34 +399,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_checkpoint(model_to_save, filename='checkpoint.pt'):\n",
-    "    torch.save(model_to_save.state_dict(), MODEL_DIR / filename)\n",
-    "\n",
-    "best_loss = None\n",
-    "counter = 0"
+    "    torch.save(model_to_save.state_dict(), MODEL_DIR / filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5 - Train Loss: 1.0151 - Val Loss: 0.9871: 100%|██████████| 226/226 [00:12<00:00, 17.45it/s]\n",
-      "Epoch 2/5 - Train Loss: 0.9186 - Val Loss: 0.8820: 100%|██████████| 226/226 [00:12<00:00, 17.80it/s]\n",
-      "Epoch 3/5 - Train Loss: 0.8773 - Val Loss: 1.0769: 100%|██████████| 226/226 [00:13<00:00, 16.70it/s]\n",
-      "Epoch 4/5 - Train Loss: 0.8860:  11%|█▏        | 103/904 [00:16<01:59,  6.72it/s]"
+      "Epoch 1/10 - Train Loss: 1.0623 - Val Loss: 0.9865: 100%|██████████| 273/273 [00:15<00:00, 18.09it/s]\n",
+      "Epoch 2/10 - Train Loss: 0.9684 - Val Loss: 1.0514: 100%|██████████| 273/273 [00:13<00:00, 19.65it/s]\n",
+      "Epoch 3/10 - Train Loss: 0.9195 - Val Loss: 1.3018: 100%|██████████| 273/273 [00:14<00:00, 18.98it/s]\n",
+      "Epoch 4/10 - Train Loss: 0.8870 - Val Loss: 0.9277: 100%|██████████| 273/273 [00:13<00:00, 19.84it/s]\n",
+      "Epoch 5/10 - Train Loss: 0.8470 - Val Loss: 0.9401: 100%|██████████| 273/273 [00:13<00:00, 19.76it/s]\n",
+      "Epoch 6/10 - Train Loss: 0.7915 - Val Loss: 1.0354: 100%|██████████| 273/273 [00:13<00:00, 19.75it/s]\n",
+      "Epoch 7/10 - Train Loss: 0.7289:  14%|█▍        | 155/1090 [00:21<02:09,  7.24it/s]"
      ]
     }
    ],
    "source": [
+    "best_loss = None\n",
+    "counter = 0\n",
+    "\n",
     "for epoch in range(num_epochs):\n",
     "    ## TRAINING LOOP\n",
     "    train_count = 0\n",
@@ -359,13 +437,14 @@
     "    avg_train_loss = 0\n",
     "    pbar_train = tqdm(train_loader, total=len(train_loader), leave=False)\n",
     "    model.train()\n",
-    "    for idx, (uids, imgs, targets) in enumerate(pbar_train):\n",
+    "    for idx, (uids, imgs, temperatures, targets) in enumerate(pbar_train):\n",
     "        # Move data to device\n",
     "        imgs = imgs.to(device)\n",
+    "        temperatures = temperatures.to(device)\n",
     "        targets = targets.to(device)\n",
     "        \n",
     "        # Forward pass   \n",
-    "        outputs = model(imgs)\n",
+    "        outputs = model(imgs, temperatures)\n",
     "        loss = criterion(outputs, targets)\n",
     "        #rmse = RMSELoss(outputs, targets)\n",
     "        \n",
@@ -392,13 +471,14 @@
     "    pbar_val = tqdm(val_loader, total=len(val_loader), leave=True)\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        for idx, (uid, imgs, targets) in enumerate(pbar_val):\n",
+    "        for idx, (uid, imgs, temperatures, targets) in enumerate(pbar_val):\n",
     "            # Move data to device\n",
     "            imgs = imgs.to(device)\n",
+    "            temperatures = temperatures.to(device)\n",
     "            targets = targets.to(device)\n",
     "            \n",
     "            # Forward pass\n",
-    "            outputs = model(imgs)\n",
+    "            outputs = model(imgs, temperatures)\n",
     "            loss = criterion(outputs, targets)\n",
     "            \n",
     "            # Update progress bar\n",
@@ -438,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Predictions"
+    "## Generate Predictions"
    ]
   },
   {
@@ -458,7 +538,7 @@
     }
    ],
    "source": [
-    "model = CNN(NUM_CLASSES).to(device)\n",
+    "model = CNN().to(device)\n",
     "\n",
     "model_pth = MODEL_DIR / 'checkpoint.pt'\n",
     "model.load_state_dict(torch.load(model_pth))\n"
@@ -484,11 +564,12 @@
     "\n",
     "model.eval()\n",
     "pbar = tqdm(test_loader, total=len(test_loader), leave=True)\n",
-    "for idx, (uid, img, _) in enumerate(pbar):\n",
+    "for idx, (uid, img, temperature,  _) in enumerate(pbar):\n",
     "    uid = uid[0]\n",
+    "    temperature = temperature.to(device)\n",
     "    img = img.to(device)\n",
     "    \n",
-    "    output = model(img)\n",
+    "    output = model(img, temperatures)\n",
     "    \n",
     "    prediction = torch.argmax(F.softmax(output, dim=1), dim=1)\n",
     "    \n",
